# stream-todo

./: package-lock.json  package.json
patches/: @tauri-apps+plugin-positioner+2.0.0.patch
src/: context.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: permissions.json
src-tauri/src/: main.rs
src/app-api/: index.ts  setupShortcuts.ts  setupTray.ts
src/components/: Layout.tsx  Tabs.tsx  TodoList.tsx
src/hooks/: setup.ts
src/view/: App.tsx  Home.tsx
